Refactor: InventoryCommandServiceTest (#LAI-19)